--- a/doom-emacs/.doom.d/config.org
+++ b/doom-emacs/.doom.d/config.org
@@ -156,3 +156,6 @@ Dial the GC threshold back down so that garbage collection happens more frequent
                             (top . 60)))
 #+end_src
 
+#+RESULTS:
+: ((height . 50) (width . 175) (left . 300) (top . 60))
+
